Encapsulate map state and harden map construction